--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -9,6 +9,20 @@
     <title>Login</title>
 </head>
 <body>
-    
+    <div class="w-100">
+        <h1 class="ml-3">Login</h1>
+        <form action="/user_login" method="POST">
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="login_email" class="col-sm-2 col-form-label">Email</label>
+                <input type="text" name="login_email" id="login_email">
+            </div>
+            <div class="form-group">
+                <label for="login_pass" class="col-sm-2 col-form-label">Password</label>
+                <input type="text" name="login_pass" id="login_pass">
+            </div>
+            <input type="submit" value="Log In" class="form-group ml-3">
+        </form>
+    </div>
 </body>
 </html>
