--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -13,6 +13,10 @@
 </head>
 
 <body id="body">
+    <header >
+        <h2>Foodie Favs</h2>
+        <p>About</p>
+    </header>
     <div class="w-100">
         <h1 class="ml-3">Login</h1>
         <form action="/user_login" method="POST">
