--- a/login/static/login.css
+++ b/login/static/login.css
@@ -2,4 +2,10 @@
 
 #body {
     background-color: #EAD6CD;
+    font-family: "Roboto", sans-serif;
+}
+
+#header {
+    color: #394F8A;
+    font-weight: bold;
 }
