--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -8,14 +8,16 @@
     <title>Login</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     {% load static %}
     <link rel="stylesheet" href="{% static 'login.css' %}">
 </head>
 
 <body id="body">
-    <header >
-        <h2>Foodie Favs</h2>
-        <p>About</p>
+    <header id="header" class="bg-white d-flex p-3 align-items-center">
+        <h2 class="pr-5 mb-0">Foodie Favs</h2>
+        <h4 class="mb-0">About</h4>
     </header>
     <div class="w-100">
         <h1 class="ml-3">Login</h1>
