add link to sign in

--- a/login/templates/register.html
+++ b/login/templates/register.html
@@ -32,7 +32,7 @@
                 <br>
                 <input class="sign-in w-25 m-2 p-2 shadow-sm rounded border-0" type="submit" value="Register">
             </form>
-            <p class="text-center">Already a user? <a class="text-primary"><u>Sign In</u></a></p>
+            <p class="text-center">Already a user? <a class="text-primary" href="/"><u>Sign In</u></a></p>
         </div>
         
     </div>
