--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -17,7 +17,7 @@
 <body id="body">
     <header id="header" class="bg-white d-flex p-3 align-items-center">
         <h2 class="pr-5 mb-0">Foodie Favs</h2>
-        <h4 class="mb-0">About</h4>
+        <h4 class="mb-0"><a href="/about">About</a></h4>
     </header>
     <div style="height: 750px;" class="w-50 ml-auto mr-auto mt-5 mb-5 d-flex flex-column" id="login">
         <div class="form w-50 ml-auto h-100">   
@@ -29,7 +29,7 @@
                 <br>
                 <input class="sign-in w-25 m-2 p-2 shadow-sm rounded border-0" type="submit" value="Sign In">
             </form>
-            <p>Not a user? <a class="text-primary"><u>Register</u></a></p>
+            <p class="text-center">Not a user? <a class="text-primary" href="/register"><u>Register</u></a></p>
         </div>
         
     </div>
