--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -17,12 +17,12 @@
 <body id="body">
     <header id="header" class="bg-white d-flex p-3 align-items-center">
         <h2 class="pr-5 mb-0">Foodie Favs</h2>
-        <h4 class="mb-0"><a href="/about">About</a></h4>
+        <h4 class="mb-0"><a href="/about" class="about">About</a></h4>
     </header>
     <div style="height: 750px;" class="w-50 ml-auto mr-auto mt-5 mb-5 d-flex flex-column" id="login">
         <div class="form w-50 ml-auto h-100">   
             <h1 class="text-center">Login</h1>
-            <form action="/user_login" method="POST" class="">
+            <form action="/user_login" method="POST">
                 {% csrf_token %}
                 <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="login_email" id="login_email" placeholder="email">
                 <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="login_pass" id="login_pass" placeholder="password">
