--- a/login/static/login.css
+++ b/login/static/login.css
@@ -1,7 +1,7 @@
 /* CSS for the page */
 
 #body {
-    background-color: #FBE8A6;
+    background-color: #d2fdff;
     font-family: "Roboto", sans-serif;
 }
 
@@ -11,11 +11,11 @@
 }
 
 #login {
-    background-color: #d2fdff;
+    background-color: ;
 }
 
 .form {
-    background-color: white;
+    background-image: ;
 }
 
 .sign-in{
