--- a/login/templates/foodie_favs.html
+++ b/login/templates/foodie_favs.html
@@ -11,13 +11,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/login.css' %}">
+    <link rel="stylesheet" href="{% static 'css/foodie_favs.css' %}">
 </head>
 
 <body id="body">
     <header id="header" class="bg-white d-flex p-3 align-items-center">
         <h2 class="pr-5 mb-0">Foodie Favs</h2>
-        <h4 class="mb-0"><a href="/about" class="about">About</a></h4>
     </header>
 </body>
 
