--- a/login/static/css/foodie_favs.css
+++ b/login/static/css/foodie_favs.css
@@ -11,3 +11,12 @@
     color: #303c6c;
     font-weight: bold;
 }
+
+.about {
+    background-color: #fbe8a6;
+}
+
+#sign-in {
+    background-color: #303c6c;
+    color: #d2fdff;
+}
