--- a/login/templates/foodie_favs.html
+++ b/login/templates/foodie_favs.html
@@ -17,7 +17,26 @@
 <body id="body">
     <header id="header" class="bg-white d-flex p-3 align-items-center">
         <h2 class="pr-5 mb-0">Foodie Favs</h2>
+        <a href="/login" class="btn btn-lg ml-auto" id="sign-in">Sign In</a>
     </header>
+    <div class="about w-75 d-flex ml-auto mr-auto p-5">
+        <div class="w-25">
+            <h4>Feature One</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus ea harum dolorem nesciunt minus quia.</p>
+        </div>
+        <div class="w-25">
+            <h4>Feature Two</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus ea harum dolorem nesciunt minus quia.</p>
+        </div>
+        <div class="w-25">
+            <h4>Feature Three</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus ea harum dolorem nesciunt minus quia.</p>
+        </div>
+        <div class="w-25">
+            <h4>Feature Four</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus ea harum dolorem nesciunt minus quia.</p>
+        </div>
+    </div>
 </body>
 
 </html>
