update background img

--- a/login/static/css/login.css
+++ b/login/static/css/login.css
@@ -11,7 +11,8 @@
 }
 
 #login {
-    background-image: url(""../img/sushi.jpg");
+    background-image: url("../img/sushi.jpg");
+    background-size: contain;
 }
 
 .form {
