link to info page

--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -17,7 +17,7 @@
 <body id="body">
     <header id="header" class="bg-white d-flex p-3 align-items-center">
         <h2 class="pr-5 mb-0">Foodie Favs</h2>
-        <h4 class="mb-0"><a href="/about" class="about">About</a></h4>
+        <h4 class="mb-0"><a href="/" class="about">About</a></h4>
     </header>
     <div style="height: 700px;" class="w-50 ml-auto mr-auto mt-5 mb-5 d-flex flex-column shadow rounded border-0" id="login">
         <div class="form w-50 ml-auto h-100">   
