--- a/login/templates/register.html
+++ b/login/templates/register.html
@@ -17,18 +17,18 @@
 <body id="body">
     <header id="header" class="bg-white d-flex p-3 align-items-center">
         <h2 class="pr-5 mb-0">Foodie Favs</h2>
-        <h4 class="mb-0"><a href="/about" class="about">About</a></h4>
+        <h4 class="mb-0"><a href="/" class="about">About</a></h4>
     </header>
     <div style="height: 700px;" class="w-50 ml-auto mr-auto mt-5 mb-5 d-flex flex-column" id="login">
         <div class="form w-50 ml-auto h-100">   
             <h1 class="text-center">Register</h1>
-            <form action="/user_login" method="POST" class="">
+            <form action="/new_user" method="POST">
                 {% csrf_token %}
                 <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="first_name" id="first_name" placeholder="first name">
                 <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="last_name" id="last_name" placeholder="last name">
                 <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="email" id="email" placeholder="email">
-                <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="pass" id="pass" placeholder="password">
-                <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="confirm_pass" id="confirm_pass" placeholder=" confirm password">
+                <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="password" id="password" placeholder="password">
+                <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="conf_password" id="conf_password" placeholder=" confirm password">
                 <br>
                 <input class="sign-in w-25 m-2 p-2 shadow-sm rounded border-0" type="submit" value="Register">
             </form>
