--- a/foodie_app/templates/new_recipe.html
+++ b/foodie_app/templates/new_recipe.html
@@ -19,6 +19,12 @@
         <h2 class="pr-5 mb-0">Foodie Favs</h2>
         <h4 class="mb-0"><a href="/" class="about">About</a></h4>
     </header>
+    <div>
+        <form action="add_recipe" method="POST">
+            <input type="text" name="name" id="name">
+            <input type="submit" name="submit" id="submit" value="Create Recipe!">
+        </form>
+    </div>
 </body>
 
 </html>
