create empty div for styling

--- a/login/templates/foodie_favs.html
+++ b/login/templates/foodie_favs.html
@@ -19,6 +19,7 @@
         <h2 class="pr-5 mb-0">Foodie Favs</h2>
         <a href="/login" class="btn btn-lg ml-auto" id="sign-in">Sign In</a>
     </header>
+    <div class="m-5 p-5"></div>
     <div class="about w-75 d-flex ml-auto mr-auto p-5">
         <div class="w-25">
             <h4>Feature One</h4>
