--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -19,17 +19,20 @@
         <h2 class="pr-5 mb-0">Foodie Favs</h2>
         <h4 class="mb-0"><a href="/" class="about">About</a></h4>
     </header>
-    <div style="height: 700px;" class="w-50 ml-auto mr-auto mt-5 mb-5 d-flex flex-column shadow rounded border-0" id="login">
-        <div class="form w-50 ml-auto h-100">   
-            <h1 class="text-center">Login</h1>
-            <form action="/user_login" method="POST">
-                {% csrf_token %}
-                <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="login_email" id="login_email" placeholder="email">
-                <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="login_pass" id="login_pass" placeholder="password">
-                <br>
-                <input class="sign-in w-25 m-2 p-2 shadow-sm rounded border-0" type="submit" value="Sign In">
-            </form>
-            <p class="text-center">Not a user? <a class="text-primary" href="/register"><u>Register</u></a></p>
+    <div style="height: 700px;" class="w-50 ml-auto mr-auto mt-5 mb-5 shadow rounded border-0" id="login">
+        <div class="form w-50 h-100 container d-flex flex-column justify-content-center mr-0">
+            <div class="h-50">
+                <h1 class="text-center">Login</h1>
+                <form class="mr-auto ml-auto w-100 text-center" action="/user_login" method="POST">
+                    {% csrf_token %}
+                    <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="login_email" id="login_email" placeholder="email">
+                    <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="login_pass" id="login_pass" placeholder="password">
+                    <br>
+                    <input class="sign-in w-25 m-2 p-2 shadow-sm rounded border-0" type="submit" value="Sign In">
+                </form>
+                <p class="text-center">Not a user? <a class="text-primary" href="/register"><u>Register</u></a></p>
+            </div>
+            
         </div>
         
     </div>
