--- a/login/templates/register.html
+++ b/login/templates/register.html
@@ -19,23 +19,28 @@
         <h2 class="pr-5 mb-0">Foodie Favs</h2>
         <h4 class="mb-0"><a href="/" class="about">About</a></h4>
     </header>
-    <div style="height: 700px;" class="w-50 ml-auto mr-auto mt-5 mb-5 d-flex flex-column" id="login">
-        <div class="form w-50 ml-auto h-100">   
-            <h1 class="text-center">Register</h1>
-            <form action="/new_user" method="POST">
-                {% csrf_token %}
-                <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="first_name" id="first_name" placeholder="first name">
-                <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="last_name" id="last_name" placeholder="last name">
-                <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="email" id="email" placeholder="email">
-                <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="password" id="password" placeholder="password">
-                <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="conf_password" id="conf_password" placeholder=" confirm password">
-                <br>
-                <input class="sign-in w-25 m-2 p-2 shadow-sm rounded border-0" type="submit" value="Register">
-            </form>
-            <p class="text-center">Already a user? <a class="text-primary" href="/login"><u>Sign In</u></a></p>
+    <div style="height: 700px;" class="w-50 ml-auto mr-auto mt-5 mb-5 shadow rounded border-0" id="login">
+        <div class="form w-50 h-100 container d-flex flex-column justify-content-center mr-0">
+            <div>
+                <h1 class="text-center">Register</h1>
+                <form class="mr-auto ml-auto w-100 text-center" action="/new_user" method="POST">
+                    {% csrf_token %}
+                    <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="first_name" id="first_name" placeholder="first name">
+                    <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="last_name" id="last_name" placeholder="last name">
+                    <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="email" id="email" placeholder="email">
+                    <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="password" id="password" placeholder="password">
+                    <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="conf_password" id="conf_password" placeholder=" confirm password">
+                    <br>
+                    <input class="sign-in w-25 m-2 p-2 shadow-sm rounded border-0" type="submit" value="Register">
+                </form>
+                <p class="text-center">Already a user? <a class="text-primary" href="/login"><u>Sign In</u></a></p>
+            </div>
+            
         </div>
         
     </div>
+            
+
 </body>
 
 </html>
