Initial functionalifty for add recipe

--- a/foodie_app/templates/new_recipe.html
+++ b/foodie_app/templates/new_recipe.html
@@ -47,6 +47,7 @@
             <button class="mt-3 rounded shadow-sm bg-white rounded" type="button" id="addStep">Add step</button>
             <br>
             <input class="mt-3 submit rounded shadow-sm rounded" type="submit" name="submit" id="submit" value="Create Recipe!">
+            <input type="hidden" name="user_id" value="{{user.id}}">
         </form>
     </div>
 </body>
