--- a/foodie_app/templates/user_profile.html
+++ b/foodie_app/templates/user_profile.html
@@ -16,8 +16,8 @@
 
 <body id="body">
     <header id="header" class="bg-white d-flex p-3 align-items-center">
-        <h2 class="pr-5 mb-0">Foodie Favs</h2>
-        <p>{{user.first_name}}</p>
+        <h2 class="mb-0">Foodie Favs</h2>
+        <p class="icon ml-auto mb-0 text-center pt-2 rounded-circle">{{user.first_name}}</p>
     </header>
 </body>
 
