initial menu styling

--- a/foodie_app/templates/user_profile.html
+++ b/foodie_app/templates/user_profile.html
@@ -20,5 +20,8 @@
         <p class="icon ml-auto mb-0 text-center pt-2 rounded-circle">{{user.first_name}}</p>
     </header>
 </body>
+    <div class="menu w-50">
+        
+    </div>
 
 </html>
