--- a/foodie_app/templates/user_profile.html
+++ b/foodie_app/templates/user_profile.html
@@ -10,6 +10,7 @@
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
@@ -19,9 +20,23 @@
         <h2 class="mb-0">Foodie Favs</h2>
         <p class="icon ml-auto mb-0 text-center pt-2 rounded-circle">{{user.first_name}}</p>
     </header>
-</body>
-    <div class="menu w-50">
-        
+    <div class="d-flex mt-1">
+        <div class="w-50">
+            <h2 class="heading">This Week</h2>
+            <div class="menu w-100 m-3">
+            </div>
+        </div>
+        <div class="w-25">
+            <h2 class="heading">Recipies</h2>
+            <div>
+    
+            </div>
+        </div>
+        <div class="w-25">
+            <h2 class="heading">Shopping List</h2>
+        </div>
     </div>
+</body>
+
 
 </html>
