--- a/foodie_app/templates/user_profile.html
+++ b/foodie_app/templates/user_profile.html
@@ -23,13 +23,41 @@
     <div class="d-flex mt-1">
         <div class="w-50">
             <h2 class="heading">This Week</h2>
-            <div class="menu w-100 m-3">
+            <div class="menu w-100 m-3 d-flex flex-column p-1">
+                <div class="day-row d-flex justify-content-around p-1">
+                    <div class="day">
+                        <p>Sunday</p>
+                    </div>
+                    <div class="day">
+                        <p>Monday</p>
+                    </div>
+                    <div class="day">
+                        <p>Tuesday</p>
+                    </div>
+                </div>
+
+                <div class="day-row d-flex justify-content-around p-1">
+                    <div class="day">
+                        <p>Wednesday</p>
+                    </div>
+                    <div class="day">
+                        <p>Thursday</p>
+                    </div>
+                    <div class="day">
+                        <p>Friday</p>
+                    </div>
+                </div>
+                <div class="day-row d-flex justify-content-around p-1">
+                    <div class="day">
+                        <p>Saturday</p>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="w-25">
             <h2 class="heading">Recipies</h2>
             <div>
-    
+
             </div>
         </div>
         <div class="w-25">
