--- a/foodie_app/static/css/style.css
+++ b/foodie_app/static/css/style.css
@@ -14,11 +14,26 @@ h2 {
 
 .menu {
     background-color: #d2fdff;
-    height: 500px;
+    height: 600px;
 }
 
-.heading{
+.heading {
     font-family: 'Dancing Script', cursive;
     color: #303c6c;
     text-align: center;
+}
+
+.day-row {
+    width: 100%;
+    height: 33%;
+}
+
+.day {
+    width: 30%;
+    background-color: white;
+}
+
+.day p {
+    text-align: center;
+    size: 1.15em;
 }
