--- a/foodie_app/templates/user_profile.html
+++ b/foodie_app/templates/user_profile.html
@@ -23,7 +23,7 @@
     <div class="d-flex mt-1">
         <div class="w-50">
             <h2 class="heading">This Week</h2>
-            <div class="menu w-100 m-3 d-flex flex-column p-1">
+            <div class="menu w-100 m-3 d-flex flex-column p-1 rounded">
                 <div class="day-row d-flex justify-content-around p-1">
                     <div class="day">
                         <p>Sunday</p>
@@ -62,6 +62,9 @@
         </div>
         <div class="w-25">
             <h2 class="heading">Shopping List</h2>
+            <div class="shopping-list m-1 p-2 rounded">
+                <button class="add-item rounded">Add Item</button>
+            </div>
         </div>
     </div>
 </body>
