--- a/foodie_app/templates/new_recipe.html
+++ b/foodie_app/templates/new_recipe.html
@@ -33,16 +33,11 @@
             </div>
             
             <p class="label">Ingredients:</p>
-            <div class="mb-3" id="ingredients">
-                <label for="amount">Amount:</label>
-                <input type="text" name="amount">
-                <label for="ingredient">Name:</label>
-                <input type="text" name="ingredient">
+            <div class="mb-3 w-100" id="ingredients">
             </div>
             <button class="mb-3 rounded shadow-sm bg-white rounded" type="button" id="addIngredient">Add ingredient</button>
             <p class="label">Steps:</p>
             <div id="steps">
-                <input type="text" name="step" id="step">
             </div>
             <button class="mt-3 rounded shadow-sm bg-white rounded" type="button" id="addStep">Add step</button>
             <br>
