--- a/foodie_app/templates/new_recipe.html
+++ b/foodie_app/templates/new_recipe.html
@@ -21,7 +21,10 @@
 <body id="body">
     <header id="header" class="bg-white d-flex p-3 align-items-center">
         <h2 class="pr-5 mb-0">Foodie Favs</h2>
-        <h4 class="mb-0"><a href="/" class="about">About</a></h4>
+        <form action="/home/log_off" method="POST">
+            {% csrf_token %}
+            <input class="btn btn-link" type="submit" name="log_off" value="Log Out">
+        </form>
     </header>
     <div class="mt-5 ml-auto mr-auto w-50 shadow-sm p-3 mb-5 bg-white rounded">
         <form method="POST">
