--- a/foodie_app/static/css/style.css
+++ b/foodie_app/static/css/style.css
@@ -10,6 +10,7 @@ h2 {
     height: 3em;
     width: 3em;
     border: 2px solid #303c6c;
+    color: #303c6c;
 }
 
 .menu {
@@ -46,4 +47,9 @@ h2 {
     background-color: #303c6c;
     color: #d2fdff;
     font-size: 1.15em;
+}
+
+#log-off {
+    background-color: #303c6c;
+    color: #d2fdff;
 }
