--- a/foodie_app/templates/user_profile.html
+++ b/foodie_app/templates/user_profile.html
@@ -17,12 +17,9 @@
 
 <body id="body">
     <header id="header" class="bg-white d-flex p-3 align-items-center">
-        <h2 class="mb-0">Foodie Favs</h2>
-        <p class="icon ml-auto mb-0 text-center pt-2 rounded-circle">{{user.first_name}}</p>
-        <form action="/home/log_off" method="POST">
-            {% csrf_token %}
-            <input class="btn btn-link" type="submit" name="log_off" value="Log Out">
-        </form>
+        <h2 class="pr-5 mb-0">Foodie Favs</h2>
+        <a href="/home/{{user.id}}" class="icon ml-auto mb-0 text-center pt-2 rounded-circle">{{user.first_name}}</a>
+        <a href="/home/log_off" class="btn ml-3 p-2" id="log-off">Log Off</a>
     </header>
     <div class="d-flex mt-1">
         <div class="w-50">
