--- a/login/static/css/login.css
+++ b/login/static/css/login.css
@@ -1,7 +1,7 @@
 /* CSS for the page */
 
 #body {
-    background-color: #d2fdff;
+    background-color: #fbe8a6;
     font-family: "Roboto", sans-serif;
 }
 
