add description to recipe

--- a/foodie_app/templates/new_recipe.html
+++ b/foodie_app/templates/new_recipe.html
@@ -32,6 +32,11 @@
                 <br>
                 <input type="text" name="name" id="name">
             </div>
+            <div class="form-group">
+                <label class="label" for="name">Recipe Description:</label>
+                <br>
+                <textarea name="desc" id="desc" cols="30" rows="5"></textarea>
+            </div>
             <p class="label">Ingredients:</p>
             <div class="mb-3 w-100" id="ingredients">
             </div>
