add recipe route to user profile

--- a/foodie_app/static/css/style.css
+++ b/foodie_app/static/css/style.css
@@ -53,3 +53,8 @@ h2 {
     background-color: #303c6c;
     color: #d2fdff;
 }
+
+.new-recipe {
+    border: 2px solid #d2fdff;
+    color: #303c6c;
+}
