--- a/foodie_app/templates/user_profile.html
+++ b/foodie_app/templates/user_profile.html
@@ -55,8 +55,9 @@
                 </div>
             </div>
         </div>
-        <div class="w-25">
-            <h2 class="heading">Recipies</h2>
+        <div class="w-25 d-flex flex-column align-items-center">
+            <h2 class="heading ">Recipies</h2>
+            <a href="/home/new_recipe" class="new-recipe p-1 rounded shadow-sm bg-white rounded">Add New Recipe</a>
             <div>
             </div>
         </div>
