--- a/foodie_app/static/css/new_recipe.css
+++ b/foodie_app/static/css/new_recipe.css
@@ -20,3 +20,15 @@ button, .submitIngredient, .submitStep {
     color: #d2fdff;
     font-size: 1.15em;
     }
+
+.icon {
+    height: 3em;
+    width: 3em;
+    border: 2px solid #303c6c;
+    color: #303c6c;
+}
+
+#log-off {
+    background-color: #303c6c;
+    color: #d2fdff;
+}
