update day styles

--- a/foodie_app/templates/new_recipe.html
+++ b/foodie_app/templates/new_recipe.html
@@ -40,14 +40,14 @@
             <p class="label">Ingredients:</p>
             <div class="mb-3 w-100" id="ingredients">
             </div>
-            <button class="mb-3 rounded shadow-sm bg-white rounded" type="button" id="addIngredient">Add ingredient</button>
+            <button class="mb-3 rounded shadow-sm bg-white" type="button" id="addIngredient">Add ingredient</button>
             <p class="label">Steps:</p>
             <div id="steps">
             </div>
-            <button class="mt-3 rounded shadow-sm bg-white rounded" type="button" id="addStep">Add step</button>
+            <button class="mt-3 rounded shadow-sm bg-white" type="button" id="addStep">Add step</button>
             <br>
             <input type="hidden" name="user_id" value="{{user.id}}" id="user">
-            <input class="mt-3 submit rounded shadow-sm rounded" type="submit" name="submit" id="submit" value="Create Recipe!">
+            <input class="mt-3 submit rounded shadow-sm" type="submit" name="submit" id="submit" value="Create Recipe!">
         </form>
     </div>
 </body>
