--- a/foodie_app/templates/user_profile.html
+++ b/foodie_app/templates/user_profile.html
@@ -26,30 +26,30 @@
             <h2 class="heading">This Week</h2>
             <div class="menu w-100 m-3 d-flex flex-column p-1 rounded">
                 <div class="day-row d-flex justify-content-around p-1">
-                    <div class="day">
+                    <div class="day rounded shadow-sm">
                         <p>Sunday</p>
                     </div>
-                    <div class="day">
+                    <div class="day rounded shadow-sm">
                         <p>Monday</p>
                     </div>
-                    <div class="day">
+                    <div class="day rounded shadow-sm">
                         <p>Tuesday</p>
                     </div>
                 </div>
 
                 <div class="day-row d-flex justify-content-around p-1">
-                    <div class="day">
+                    <div class="day rounded shadow-sm">
                         <p>Wednesday</p>
                     </div>
-                    <div class="day">
+                    <div class="day rounded shadow-sm">
                         <p>Thursday</p>
                     </div>
-                    <div class="day">
+                    <div class="day rounded shadow-sm">
                         <p>Friday</p>
                     </div>
                 </div>
                 <div class="day-row d-flex justify-content-around p-1">
-                    <div class="day">
+                    <div class="day rounded shadow-sm">
                         <p>Saturday</p>
                     </div>
                 </div>
