--- a/foodie_app/static/css/style.css
+++ b/foodie_app/static/css/style.css
@@ -14,7 +14,7 @@ h2 {
 }
 
 .menu {
-    background-color: #d2fdff;
+    background-color: #fbe8a6;
     height: 600px;
 }
 
@@ -32,6 +32,7 @@ h2 {
 .day {
     width: 30%;
     background-color: white;
+    border: 3px solid #d2fdff;
 }
 
 .day p {
