--- a/foodie_app/templates/new_recipe.html
+++ b/foodie_app/templates/new_recipe.html
@@ -25,7 +25,7 @@
         <a href="/home/log_off" class="btn ml-3 p-2" id="log-off">Log Off</a>
     </header>
     <div class="mt-5 ml-auto mr-auto w-50 shadow-sm p-3 mb-5 bg-white rounded">
-        <form method="POST">
+        <form action="/home/add_recipe" method="POST">
             {% csrf_token %}
             <div class="form-group">
                 <label class="label" for="name">Recipe Name:</label>
@@ -37,16 +37,17 @@
                 <br>
                 <textarea name="desc" id="desc" cols="30" rows="5"></textarea>
             </div>
-            <p class="label">Ingredients:</p>
-            <div class="mb-3 w-100" id="ingredients">
+            <div class="form-group">
+                <label class="label" for="ingredients">Ingredients:</label>
+                <br>
+                <textarea name="ingredients" id="ingredients" cols="30" rows="5"></textarea>
             </div>
-            <button class="mb-3 rounded shadow-sm bg-white" type="button" id="addIngredient">Add ingredient</button>
-            <p class="label">Steps:</p>
-            <div id="steps">
+            <div class="form-group">
+                <label class="label" for="steps">Steps:</label>
+                <br>
+                <textarea name="steps" id="steps" cols="30" rows="5"></textarea>
             </div>
-            <button class="mt-3 rounded shadow-sm bg-white" type="button" id="addStep">Add step</button>
-            <br>
-            <input type="hidden" name="user_id" value="{{user.id}}" id="user">
+            <input type="hidden" name="user_id" value="{{user.id}}" id="user_id">
             <input class="mt-3 submit rounded shadow-sm" type="submit" name="submit" id="submit" value="Create Recipe!">
         </form>
     </div>
