style recipe card

--- a/foodie_app/static/css/style.css
+++ b/foodie_app/static/css/style.css
@@ -7,8 +7,6 @@ h2 {
 }
 
 .icon {
-    height: 3em;
-    width: 3em;
     border: 2px solid #303c6c;
     color: #303c6c;
 }
@@ -60,6 +58,6 @@ h2 {
     color: #303c6c;
 }
 
-.recipe-header {
+.recipe-text {
     color: #303c6c;
 }
