--- a/foodie_app/static/css/style.css
+++ b/foodie_app/static/css/style.css
@@ -61,3 +61,21 @@ h2 {
 .recipe-text {
     color: #303c6c;
 }
+
+#header {
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+
+#topBtn {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99;
+    background-color: #303c6c;
+    color: #d2fdff;
+}
