update page spacing

--- a/foodie_app/templates/user_profile.html
+++ b/foodie_app/templates/user_profile.html
@@ -21,7 +21,7 @@
         <a href="/home/{{user.id}}" class="icon ml-auto mb-0 text-center pt-2 rounded-circle">{{user.first_name}}</a>
         <a href="/home/log_off" class="btn ml-3 p-2" id="log-off">Log Off</a>
     </header>
-    <div class="d-flex mt-1">
+    <div class="d-flex mt-5 pt-5">
         <div class="w-50">
             <h2 class="heading">This Week</h2>
             <div class="menu w-100 m-3 d-flex flex-column p-1 rounded">
