--- a/foodie_app/templates/recipe.html
+++ b/foodie_app/templates/recipe.html
@@ -17,6 +17,11 @@
     <script src="{% static 'js/app.js' %}"></script> 
 </head>
 <body>
-    <h2>Testing</h2>
+    <header id="header" class="bg-white d-flex p-3 align-items-center shadow-sm mt-0">
+        <h2 class="pr-5 mb-0">Foodie Favs</h2>
+        <a href="/home/new_recipe" class="new-recipe p-1 rounded ml-auto mr-2">+ Recipe</a>
+        <a href="/home/{{user.id}}" class="icon rounded p-1">My Profile</a>
+        <a href="/home/log_off" class="btn ml-2 p-1" id="log-off">Log Off</a>
+    </header>
 </body>
 </html>
