add page content

--- a/foodie_app/templates/recipe.html
+++ b/foodie_app/templates/recipe.html
@@ -23,5 +23,12 @@
         <a href="/home/{{user.id}}" class="icon rounded p-1">My Profile</a>
         <a href="/home/log_off" class="btn ml-2 p-1" id="log-off">Log Off</a>
     </header>
+    <div class="pt-5"></div>
+    <div class="w-50 shadow-sm mt-5 p-4 ml-auto mr-auto">
+        <h2>{{recipe.name}}</h2>
+        <p>{{recipe.desc}}</p>
+        <p>{{recipe.ingredients}}</p>
+        <p>{{recipe.steps}}</p>
+    </div>
 </body>
 </html>
