--- a/foodie_app/templates/recipe.html
+++ b/foodie_app/templates/recipe.html
@@ -25,6 +25,7 @@
     </header>
     <div class="pt-5"></div>
     <div class="w-50 shadow-sm mt-5 p-4 ml-auto mr-auto rounded">
+    <button id="topBtn" title="Go to top" class="btn rounded shadow">Top</button>
         <h2 class="text-center">{{recipe.name}}</h2>
         <div class="p-4">
             <p>{{recipe.desc}}</p>
