--- a/foodie_app/templates/recipe.html
+++ b/foodie_app/templates/recipe.html
@@ -21,7 +21,7 @@
         <h2 class="pr-5 mb-0">Foodie Favs</h2>
         <a href="/home/new_recipe" class="new-recipe p-1 rounded ml-auto mr-2">+ Recipe</a>
         <a href="/home/{{user.id}}" class="icon rounded p-1">My Profile</a>
-        <a href="/home/log_off" class="btn ml-2 p-1" id="log-off">Log Off</a>
+        <a href="/home" class="btn ml-2 p-1" id="log-off">Home</a>
     </header>
     <button id="topBtn" title="Go to top" class="btn rounded shadow">Top</button>
     <div class="pt-5"></div>
