update recipes in profile page

--- a/foodie_app/templates/user_profile.html
+++ b/foodie_app/templates/user_profile.html
@@ -58,8 +58,9 @@
         <div class="w-25 d-flex flex-column align-items-center">
             <h2 class="heading ">Recipies</h2>
             <a href="/home/new_recipe" class="new-recipe p-1 rounded shadow-sm bg-white rounded">Add New Recipe</a>
-            <div>
-            </div>
+            {% for recipe in recipies %}
+                <p>{{recipe.name}}</p>
+            {% endfor %}
         </div>
         <div class="w-25">
             <h2 class="heading">Shopping List</h2>
