--- a/foodie_app/templates/new_recipe.html
+++ b/foodie_app/templates/new_recipe.html
@@ -37,17 +37,16 @@
                 <br>
                 <textarea name="desc" id="desc" cols="30" rows="5"></textarea>
             </div>
-            <div class="form-group">
-                <label class="label" for="ingredients">Ingredients:</label>
-                <br>
-                <textarea name="ingredients" id="ingredients" cols="30" rows="5"></textarea>
+            <p class="label">Ingredients:</p>
+            <div class="mb-3 w-100" id="ingredients">
             </div>
-            <div class="form-group">
-                <label class="label" for="steps">Steps:</label>
-                <br>
-                <textarea name="steps" id="steps" cols="30" rows="5"></textarea>
+            <button class="mb-3 rounded shadow-sm bg-white" type="button" id="addIngredient">Add ingredient</button>
+            <p class="label">Steps:</p>
+            <div id="steps">
             </div>
-            <input type="hidden" name="user_id" value="{{user.id}}" id="user_id">
+            <button class="mt-3 rounded shadow-sm bg-white" type="button" id="addStep">Add step</button>
+            <br>
+            <input type="hidden" name="user_id" value="{{user.id}}" id="user">
             <input class="mt-3 submit rounded shadow-sm" type="submit" name="submit" id="submit" value="Create Recipe!">
         </form>
     </div>
