--- a/foodie_app/templates/edit_recipe.html
+++ b/foodie_app/templates/edit_recipe.html
@@ -17,33 +17,33 @@
     <script src="{% static 'js/app.js' %}"></script>
 </head>
 <body>
-    <div>
+    <div class="w-50 shadow-sm mt-5 p-4 ml-auto mr-auto rounded">
         <h2>{{recipe.name}}</h2>
-        <p>Added by: {{recipe.creator.first_name}} {{recipe.creator.last_name}}</p>
+        <p class="mb-1">Added by: {{recipe.creator.first_name}} {{recipe.creator.last_name}}</p>
         <p>Last updated: {{recipe.updated_at}}</p>
         <form action="/home/edit" method="POST" id="edit-recipe-form">
             {% csrf_token %}
             <div class="form-group">
-                <label class="label" for="desc">Recipe Description:</label>
+                <label class="label font-weight-bold" for="desc">Recipe Description:</label>
                 <br>
-                <textarea name="desc" id="desc" cols="30" rows="5">{{recipe.desc}}</textarea>
+                <textarea name="desc" id="desc" cols="30" rows="5" class="w-50">{{recipe.desc}}</textarea>
             </div>
             <div class="form-group">
-                <label class="label" for="ingredients">Ingredients:</label>
+                <label class="label font-weight-bold" for="ingredients">Ingredients:</label>
                 <br>
-                <textarea name="ingredients" id="ingredients" cols="30" rows="5">{{recipe.ingredients}}</textarea>
+                <textarea name="ingredients" id="ingredients" cols="30" rows="5" class="w-50">{{recipe.ingredients}}</textarea>
             </div>
             <div class="form-group">
-                <label class="label" for="steps">Steps:</label>
+                <label class="label font-weight-bold" for="steps">Steps:</label>
                 <br>
-                <textarea name="steps" id="steps" cols="30" rows="5">{{recipe.steps}}</textarea>
+                <textarea name="steps" id="steps" cols="30" rows="5" class="w-50">{{recipe.steps}}</textarea>
             </div>
             <div class="form-group">
-                <label class="label" for="source">Recipe From:</label>
+                <label class="label font-weight-bold" for="source">Recipe From:</label>
                 <br>
-                <textarea name="source" id="source" cols="45" rows="1">{{recipe.source}}</textarea>
+                <textarea name="source" id="source" cols="45" rows="1" class="w-50">{{recipe.source}}</textarea>
             </div>
-            <input class="mt-3 submit rounded shadow-sm" type="submit" name="submit" id="submit" value="Create Recipe!">
+            <input class="mt-3 edit-recipe rounded shadow-sm" type="submit" name="submit" id="submit" value="Update Recipe">
         </form>
     </div>
     
